--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3.4"
 services:
   kong:
-    build: .
-    image: rucciva/kong-dev-onbuild:0.0.2
+    build: 
+      context: .
+      args:
+        - KONG_VERSION=0.12.1
+    image: rucciva/kong-dev-onbuild:0.12.1
