--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,6 @@ services:
   kong:
     build: 
       context: .
-    image: rucciva/kong-dev-onbuild:1.1.1
+      args:
+        - KONG_VERSION=1.2.0
+    image: rucciva/kong-dev-onbuild:1.2.0
